# elt-playground

./: .gitignore  Makefile  README.md  docker-compose.yml
elt-script/: .dockerignore  dagster.yaml  dagster.yml  main.py  pyproject.toml  workspace.yaml  workspace.yml
elt-script/elt_script/: main.py  transfer_data.py
elt-script/elt_script/connector/: configuration.py  connector_interface.py  connector_readwriter.py  logging_contextmanager.py  pg_connector.py  usql_connector.py
elt-script/pg_transform/: pyproject.toml  setup.py
elt-script/pg_transform/pg_transform/: assets.py  constants.py  definitions.py  schedules.py
elt-script/postgres_transform/: .user.yml  dbt_project.yml  profiles.yml
elt-script/postgres_transform/macros/: generate_film_ratings.sql  get_rating_category.sql
elt-script/postgres_transform/models/films_actors/: actors.sql  film_actors.sql  film_ratings.sql  films.sql  sources.yml
elt-script/tests/: base_testcase.py
elt-script/tests/connector/: connector_test.py  fake_connector.py
elt-script/tests/script/: elt_test.py
