[tool.poetry]
name = "elt-script"
version = "0.1.0"
description = "ELT script I'm going to run"
authors = ["Edward Heaver <edward.heaver01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
